[gd_scene load_steps=5 format=3 uid="uid://3utpe0h61hm7"]

[ext_resource type="Script" uid="uid://56j4wadrnm2r" path="res://pause.gd" id="1_6eyaj"]
[ext_resource type="FontFile" uid="uid://c66m8eqhagoyw" path="res://assets/Fonts_UI/m6x11plus.ttf" id="2_bwtow"]
[ext_resource type="AudioStream" uid="uid://dxy64arumg7p3" path="res://assets/Efeitos/game-start-6104.mp3" id="3_05lnj"]

[sub_resource type="Theme" id="Theme_07a1d"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6eyaj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Polygon2D" type="Polygon2D" parent="MarginContainer"]
position = Vector2(772.145, 395)
scale = Vector2(1.02254, 1)
color = Color(0.996078, 0.698039, 0, 1)
polygon = PackedVector2Array(-450.364, -255.782, 786.132, -256, 792, 402, -447, 399)
uv = PackedVector2Array(-1259.32, -313.656, 2649.3, -374.815, 2654.51, 862.332, -1344.49, 724.436)

[node name="SoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_05lnj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 0.422222
anchor_bottom = 0.422222
offset_left = 374.0
offset_top = -283.0
offset_right = 740.0
offset_bottom = -85.9998
grow_vertical = 2
scale = Vector2(3.092, 3)
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 10

[node name="Resumir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_07a1d")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bwtow")
theme_override_font_sizes/font_size = 50
button_mask = 7
text = "Retomar"

[node name="Opcoes" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_07a1d")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bwtow")
theme_override_font_sizes/font_size = 50
button_mask = 7
text = "Opções"

[node name="Sair" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_07a1d")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bwtow")
theme_override_font_sizes/font_size = 50
button_mask = 7
text = "Sair
"

[connection signal="pressed" from="VBoxContainer/Resumir" to="." method="_on_resumir_pressed"]
[connection signal="pressed" from="VBoxContainer/Opcoes" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="VBoxContainer/Opcoes" to="." method="_on_opcoes_pressed"]
[connection signal="pressed" from="VBoxContainer/Sair" to="." method="_on_sair_pressed"]
